--- a/src/templates/blog-list.html
+++ b/src/templates/blog-list.html
@@ -1,7 +1,7 @@
 <h1>Blog List</h1>
 <ul ng-if='items.length > 0'>
     <li ng-repeat='item in items'>
-            <a ng-href='/blog/{{ item.id }}' confirm-click="Are you ready?" confirmedClick="/blog/{{ item.id }}"/>{{ item.title }} {{ item.publishDate }}</a>
+            <a ng-href='#' confirm-click="Are you ready?" confirmed-click="goToItem(item)"/>{{ item.title }} {{ item.publishDate }}</a>
     </li>
 </ul>
 
