--- a/src/templates/blog-detail.html
+++ b/src/templates/blog-detail.html
@@ -2,3 +2,19 @@
 <h1>{{ post.title }}</h1>
 <p>{{ post.description }}</p>
 <p>{{ post.publishDate }}</p>
+
+
+<ul>
+    <li>
+        <input type="text" ng-model="query" placeholder="Filter comments"/>
+    </li>
+    <li ng-repeat="comment in post.comments | filter: query">
+        {{ comment.text }}
+    </li>
+</ul>
+<p style="color:red;" ng-if="reply.text">Preview: {{ reply.text }}</p>
+<form ng-submit="addReplay()">
+    <input type="hidden" ng-model="reply.id">
+    <textarea ng-model="reply.text"></textarea>
+    <input type="submit" />
+</form>
