--- a/src/templates/blog-detail.html
+++ b/src/templates/blog-detail.html
@@ -9,7 +9,7 @@
         <input type="text" ng-model="query" placeholder="Filter comments"/>
     </li>
     <li ng-repeat="comment in post.comments | filter: query">
-        {{ comment.text }}
+        {{ comment.text }} <a href="#" confirm-click="Do you want to delete this?" confirmed-click="deleteComment(commentcomment)">Confirm</a> <a href="#" ng-click="deleteComment(comment)">Delete</a>
     </li>
 </ul>
 <p style="color:red;" ng-if="reply.text">Preview: {{ reply.text }}</p>
