--- a/src/templates/blog-detail.html
+++ b/src/templates/blog-detail.html
@@ -1,20 +1,26 @@
-<h1>Us</h1>
-<h1>{{ post.title }}</h1>
-<p>{{ post.description }}</p>
-<p>{{ post.publishDate }}</p>
+<div class="row">
+    <div class="col-sm-6 offset-sm-3">
+        <h1>{{ post.title }} <small>{{ post.publishDate }}</small></h1><hr/>
+        <p>{{ post.description }}</p>
+        <hr/>
 
-
-<ul>
-    <li>
-        <input type="text" ng-model="query" placeholder="Filter comments"/>
-    </li>
-    <li ng-repeat="comment in post.comments | filter: query">
-        {{ comment.text }} <a href="#" confirm-click="Do you want to delete this?" confirmed-click="deleteComment(commentcomment)">Confirm</a> <a href="#" ng-click="deleteComment(comment)">Delete</a>
-    </li>
-</ul>
-<p style="color:red;" ng-if="reply.text">Preview: {{ reply.text }}</p>
-<form ng-submit="addReplay()">
-    <input type="hidden" ng-model="reply.id">
-    <textarea ng-model="reply.text"></textarea>
-    <input type="submit" />
-</form>
+        <h3>Comments</h3>
+        <div class="col-sm-12">
+            <input type="text" class="form-control" ng-model="query" placeholder="Filter comments"/>
+        </div>
+        <ul>
+            <li ng-repeat="comment in post.comments | filter: query">
+                {{ comment.text }} <a href="#" confirm-click="Do you want to delete this?" confirmed-click="deleteComment(commentcomment)">Confirm</a> <a href="#" ng-click="deleteComment(comment)">Delete</a>
+            </li>
+        </ul>
+        <p style="color:red;" ng-if="reply.text">Preview: {{ reply.text }}</p>
+        <hr/>
+        <div class="col-sm-12">
+            <form ng-submit="addReplay()">
+                <input type="hidden" ng-model="reply.id">
+                <textarea class="form-control" ng-model="reply.text"></textarea>
+                <input class="btn btn-primary" type="submit" />
+            </form>
+        </div>
+    </div>
+</div>
