--- a/src/templates/blog-list.html
+++ b/src/templates/blog-list.html
@@ -1,8 +1,12 @@
 <h1>Blog List</h1>
-<ul ng-if='items.length > 0'>
-    <li ng-repeat='item in items'>
-            <a ng-href='#' confirm-click="Are you ready?" confirmed-click="goToItem(item)"/>{{ item.title }} {{ item.publishDate }}</a>
-    </li>
-</ul>
 
-<span ng-if='items.length == 0'>Posts coming soon</span>
+<div class="card-group">
+    <div class="card" ng-repeat='item in items'>
+        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">{{ item.title }}</h5>
+            <a ng-href='#' class="btn btn-primary" confirm-click="Are you ready?" confirmed-click="goToItem(item)"/>View</a>
+        </div>
+    </div>
+    <span ng-if='items.length == 0'>Posts coming soon</span>
+</div>
