--- a/src/templates/blog-list.html
+++ b/src/templates/blog-list.html
@@ -1,11 +1,18 @@
-<h1>Blog List</h1>
 
-<div class="card-group">
-    <div class="card" ng-repeat='item in items'>
-        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">{{ item.title }}</h5>
-            <a ng-href='#' class="btn btn-primary" confirm-click="Are you ready?" confirmed-click="goToItem(item)"/>View</a>
+    <h1>Blog List <small><a href='#' ng-click='changeCols(4)'>Change</a></small></h1>
+    <div class='row'>
+        <div class='col-sm-6'>
+            <input type='text' ng-model='query' class='form-control' placeholder='Filter' />
+        </div>
+    </div>
+<div class="container">
+    <div class="row" ng-repeat='items in colItems'>
+        <div class="card {{ cssClass }} mt-3 " ng-repeat='item in items | filter: query'>
+            <img class="card-img-top" src=".../100px200/" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{ item.title }}</h5>
+                <a ng-href='#' class="btn btn-primary" confirm-click="Are you ready?" confirmed-click="goToItem(item)"/>View</a>
+            </div>
         </div>
     </div>
     <span ng-if='items.length == 0'>Posts coming soon</span>
