--- a/src/templates/try-nav.html
+++ b/src/templates/try-nav.html
@@ -5,8 +5,16 @@
   <a class="navbar-brand" ng-href="/">Try AngularJS</a>
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <form class="form-inline mr-auto mt-2 mt-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <form class="form-inline mr-auto mt-2 mt-lg-0" ng-submit="searchItem()">
+      <input
+              ng-model="searchQuery"
+              uib-typeahead="item.title for item in items | filter:$viewValue | limitTo:8"
+              class="form-control mr-sm-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+              typeahead-on-select="selectItem($item, $model, $label)"
+      />
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
     <ul class="navbar-nav my-2 my-lg-0">
